# gsl

./: DESCRIPTION  MD5  configure  configure.ac
R/: aaa.R  airy.R  bessel.R  clausen.R  coulomb.R  dawson.R  debye.R  ellint.R  elljac.R  expint.R  gamma.R  gegenbauer.R  hyperg.R  laguerre.R  lambert.R  legendre.R  multimin.R  pow_int.R  psi.R  rng.R  synchrotron.R  transport.R  trig.R  zeta.R
inst/doc/: gslpaper.Rnw
man/: Airy.Rd  Bessel.Rd  Clausen.Rd  Coulomb.Rd  Coupling.Rd  Dawson.Rd  Debye.Rd  Dilog.Rd  Ellint.Rd  Elljac.Rd  Expint.Rd  Fermi-Dirac.Rd  Gamma.Rd  Gegenbauer.Rd  Hyperg.Rd  Laguerre.Rd  Lambert.Rd  Legendre.Rd  Log.Rd  Misc.Rd  Multimin.Rd  Poly.Rd  Pow_int.Rd  Psi.Rd  Qrng.Rd  Qrng.dvi  Rng.Rd  Synchrotron.Rd  Transport.Rd  Trig.Rd  Zeta.Rd  gsl-package.Rd
src/: Makevars  Makevars.in  airy.c  bessel.c  bspline.c  clausen.c  coulomb.c  coupling.c  dawson.c  debye.c  dilog.c  ellint.c  elljac.c  error.c  expint.c  fermi_dirac.c  gamma.c  gegenbauer.c  hyperg.c  laguerre.c  lambert.c  legendre.c  log.c  multimin.c  poly.c  pow_int.c  psi.c  synchrotron.c  transport.c  trig.c  zeta.c
